<?xml version="1.0" encoding="utf-8"?>
<!--
    Patiner Montréal for Android. 
    Information about outdoor rinks in the city of Montréal: conditions,
    services, contact, map, etc.

    Copyright (C) 2010 Mudar Noufal <mn@mudar.ca>

    This file is part of Patiner Montréal for Android.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_category_general" >
        <PreferenceScreen
            android:key="prefs_conditions"
            android:summary="@string/prefs_condition_summary"
            android:title="@string/prefs_condition_title" >
            <PreferenceCategory android:title="@string/prefs_category_conditions" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="prefs_show_excellent"
                android:title="@string/prefs_condition_excellent" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="prefs_show_good"
                android:title="@string/prefs_condition_good" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="prefs_show_bad"
                android:title="@string/prefs_condition_bad" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="prefs_show_closed"
                android:title="@string/prefs_condition_closed" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="prefs_show_unknown"
                android:title="@string/prefs_condition_unknown" />
        </PreferenceScreen>

        <ListPreference
            android:defaultValue="distance"
            android:dialogTitle="@string/prefs_list_sort_dialog_title"
            android:entries="@array/prefs_list_sort_entries"
            android:entryValues="@array/prefs_list_sort_values"
            android:key="prefs_list_sort_by"
            android:title="@string/prefs_list_sort_title" />
        <ListPreference
            android:defaultValue="iso"
            android:dialogTitle="@string/prefs_units_dialog_title"
            android:entries="@array/prefs_units_entries"
            android:entryValues="@array/prefs_units_values"
            android:key="prefs_units_system"
            android:title="@string/prefs_units_title" />
        <ListPreference
            android:dialogTitle="@string/prefs_language_dialog_title"
            android:entries="@array/prefs_language_entries"
            android:entryValues="@array/prefs_language_values"
            android:key="prefs_language"
            android:title="@string/prefs_language_title" />
    </PreferenceCategory>

</PreferenceScreen>