<?xml version="1.0" encoding="utf-8"?><!--
    Patiner Montréal for Android. 
    Information about outdoor rinks in the city of Montréal: conditions,
    services, contact, map, etc.

    Copyright (C) 2010 Mudar Noufal <mn@mudar.ca>

    This file is part of Patiner Montréal for Android.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favorites_add"
        android:icon="@drawable/ic_action_star_off"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_favorites_add"
        android:visible="false" />

    <item
        android:id="@+id/favorites_remove"
        android:icon="@drawable/ic_action_star_on"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_favorites_remove" />

    <item
        android:id="@+id/map_view_rink"
        android:icon="@drawable/ic_action_compass"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_map_view_rink" />

    <item
        android:id="@+id/call_rink"
        android:icon="@drawable/ic_action_call"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/menu_call_rink" />

</menu>