<?xml version="1.0" encoding="utf-8"?>
<!--
    Patiner Montréal for Android.
    Information about outdoor rinks in the city of Montréal: conditions,
    services, contact, map, etc.

    Copyright (C) 2010 Mudar Noufal <mn@mudar.ca>

    This file is part of Patiner Montréal for Android.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:hint="@string/search_hint_global"
    android:includeInGlobalSearch="true"
    android:label="@string/app_name_search"
    android:queryAfterZeroResults="false"
    android:searchSettingsDescription="@string/search_description"
    android:searchSuggestAuthority="ca.mudar.patinoires"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://ca.mudar.patinoires/rinks"
    android:searchSuggestThreshold="2"
    android:voiceLanguage="fr"
    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer" />
