<?xml version="1.0" encoding="utf-8"?>
<!--
    Patiner Montréal for Android.
    Information about outdoor rinks in the city of Montréal: conditions,
    services, contact, map, etc.

    Copyright (C) 2010 Mudar Noufal <mn@mudar.ca>

    This file is part of Patiner Montréal for Android.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/AboutBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/l_rink_kind_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/accessibility_ic_rink"
                android:paddingRight="@dimen/paddingMedium"
                android:src="@drawable/ic_rink_skating_4" />

            <TextView
                android:id="@+id/l_rink_name"
                style="@style/RinkDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/l_rink_kind_id"
                android:singleLine="true" />

            <TextView
                android:id="@+id/l_rink_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_name"
                android:layout_toRightOf="@+id/l_rink_kind_id" />

            <TextView
                android:id="@+id/l_rink_condition"
                style="@style/RinkDetailsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_kind_id"
                android:layout_marginBottom="@dimen/bodyPaddingSmall"
                android:layout_marginTop="@dimen/bodyPaddingMedium" />

            <ImageView
                android:id="@+id/l_rink_is_cleared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_condition"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/paddingMedium"
                android:clickable="true"
                android:contentDescription="@string/accessibility_ic_is_cleared"
                android:focusable="true"
                android:gravity="center"
                android:src="@drawable/ic_surface_cleared_off" />

            <ImageView
                android:id="@+id/l_rink_is_flooded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_condition"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/paddingMedium"
                android:layout_toRightOf="@+id/l_rink_is_cleared"
                android:clickable="true"
                android:contentDescription="@string/accessibility_ic_is_flooded"
                android:focusable="true"
                android:gravity="center"
                android:src="@drawable/ic_surface_flooded_off" />

            <ImageView
                android:id="@+id/l_rink_is_resurfaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_condition"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/paddingLarge"
                android:layout_toRightOf="@+id/l_rink_is_flooded"
                android:clickable="true"
                android:contentDescription="@string/accessibility_ic_is_resurfaced"
                android:focusable="true"
                android:gravity="center"
                android:src="@drawable/ic_surface_resurfaced_off" />

            <TextView
                android:id="@+id/l_rink_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/l_rink_is_resurfaced"
                android:layout_below="@+id/l_rink_condition"
                android:layout_gravity="fill_vertical"
                android:layout_toRightOf="@+id/l_rink_is_resurfaced"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/l_park_name"
                style="@style/RinkDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_rink_is_cleared"
                android:layout_marginTop="@dimen/bodyPaddingMedium"
                android:layout_toLeftOf="@+id/l_rink_call" />

            <TextView
                android:id="@+id/l_park_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_park_name"
                android:layout_toLeftOf="@+id/l_rink_call" />

            <TextView
                android:id="@+id/l_borough_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_park_address" />

            <TextView
                android:id="@+id/l_park_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_borough_name" />

            <TextView
                android:id="@+id/l_park_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/l_park_phone"
                android:layout_below="@+id/l_park_distance"
                android:paddingBottom="@dimen/paddingLarge"
                android:paddingTop="@dimen/bodyPaddingMedium" />

            <ImageButton
                android:id="@+id/l_rink_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/l_borough_name"
                android:autoLink="phone"
                android:contentDescription="@string/accessibility_ic_dial"
                android:focusable="true"
                android:linksClickable="true"
                android:src="@drawable/ic_btn_dial" />
        </RelativeLayout>

        <TextView
            android:id="@+id/l_borough_updated_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/l_user_updated_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
    </LinearLayout>

</ScrollView>